--- a/frontend/src/styles/partials/_storeCard.scss
+++ b/frontend/src/styles/partials/_storeCard.scss
@@ -7,10 +7,13 @@
 }
 
 .Polaris-Card {
-  height: 100%;  
+  height: 100%;
 }
 
 .store-wrapper {
+  display: grid;
+  height: 100%;
+  grid-template-rows: auto 1fr auto auto auto;
 
   .Polaris-Banner--withinContentContainer.Polaris-Banner {
     margin-top: 0;
@@ -23,8 +26,6 @@
       background-image: unset;
     }
   }
-
-
 
   .Polaris-ResourceItem__Container {
     flex-direction: row-reverse;
@@ -41,7 +42,6 @@
   }
 
   .store-description--wrapper {
-
     div {
       padding: 0rem 2rem 1rem;
     }
@@ -56,13 +56,17 @@
     justify-content: start;
     justify-items: start;
 
-    &:not(:first-child){
+    &:not(:first-child) {
       margin-top: 10px;
-
     }
-    
+
     .Polaris-Icon {
       margin: auto 0px;
     }
   }
+}
+
+.store-card--footer {
+  display: flex;
+  justify-content: space-between;
 }
