Updated design language and fixed card hover

--- a/frontend/src/styles/partials/_storeCard.scss
+++ b/frontend/src/styles/partials/_storeCard.scss
@@ -19,7 +19,8 @@
     margin-top: 0;
   }
 
-  .Polaris-ResourceItem {
+  .Polaris-ResourceItem,
+  .Polaris-ResourceItem__ListItem {
     cursor: auto;
 
     &:hover {
